# Physical-AI-Humanoid-Robotics-TextBook

./: CHATBOT_INTEGRATION_THOUGHTS.md  CHATBOT_SETUP.md  DEPLOYMENT_CHECKLIST.md  GITHUB-PAGES-SETUP.md  PHASE2-PHASE5.md  README.md  SUBAGENTS-AND-SKILLS-DESIGN.md  TEXT_SELECTION_FEATURE.md  TEXT_SELECTION_FEATURE_FIXES.md  mcp.json
.claude/agents/: technical-writer.md
.claude/skills/lesson-template-generator/: SKILL.md
.claude/skills/urdu-translator/: SKILL.md
.github/workflows/: deploy.yml
.specify/memory/: constitution.md
api/: .env.example  .gitignore  DEPLOYMENT_CHECKLIST.md  Dockerfile  HF_DEPLOYMENT_CHECKLIST.md  HUGGINGFACE_DEPLOYMENT.md  README.md  README_LOCAL.md  RENDER_DEPLOYMENT.md  app.py  main.py  pyproject.toml  render.yaml  requirements.txt  test_qdrant_methods.py
api/scripts/: create_auth_tables.py  drop_and_recreate_tables.py  index_content.py  test_qdrant.py
api/src/: main.py
api/src/config/: settings.py
api/src/models/: auth.py  schemas.py
api/src/routes/: auth.py  chat.py  health.py  user.py
api/src/services/: auth_service.py  embeddings.py  indexer.py  llm.py  rag.py
api/src/utils/: chunker.py  db.py
docs/: DEPLOYMENT.md  README.md  configure-deployment.sh  docusaurus.config.ts  package-lock.json  sidebars.ts
docs/docs/: overview.md
specs/002-textbook-content-generation/: PHR.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-rag-chatbot/: README.md  plan.md  spec.md  tasks.md
specs/005-personalized-content/: FIXES_APPLIED.md  IMPLEMENTATION_STATUS.md  plan.md  spec.md  tasks.md
(+50 files in other folders)
